hphp/hack/test/typecheck/async_function_untyped4.php.exp
File "async_function_untyped4.php", line 8, characters 25-25:
Was expecting a return type hint (Typing[4030])
File "async_function_untyped4.php", line 8, characters 25-25:
The method `f` is not compatible with the overridden method (Typing[4341])
  File "async_function_untyped4.php", line 4, characters 24-26:
  Expected `int`
  File "async_function_untyped4.php", line 8, characters 25-25:
  But got `Awaitable<_>` (result of an `async` function)
